# CIL-Project

./: .gitignore  .pre-commit-config.yaml  Data_exploration.ipynb  GNN_Full.ipynb  LICENSE  README.md  init_leonhard.sh  init_leonhard_old.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml  precommit-checks.yml
CIL-Project/: comet.json  pyproject.toml
autoencoder/: Autoencoders.txt  autoencoder_01.py  autoencoder_02.py  autoencoder_03.py  autoencoder_04.py  autoencoder_05.py  autoencoder_06.py  autoencoder_07.py  introduction_autoencoder.py
data/: README.md
experiments/: README.md
experiments/figures/: Data_exploration.ipynb
experiments/notebooks/: nmf_hyperparam_tuning.ipynb  slope_one_hyperparam_tuning.ipynb  svd_unbiased_hyperparam_tuning.ipynb  svdpp_hyperparam_tuning.ipynb
neural_network/: Networks.txt  introduction_network.py  introduction_network_pytorchlightning.py  introduction_network_pytorchlightning_loss_per_epoch.py  network_01.py  network_02.py  network_03.py  network_04.py  network_05.py  network_06.py  network_07.py  network_08.py  network_09.py  network_10.py  network_11.py  network_12.py  network_13.py
predictions/: README.md
report/: 00_abstract.tex  01_introduction.tex  02_models_and_methods.tex  03_results.tex  04_discussion.tex  05_summary.tex  README.md  bibliography.bib  main.tex  preamble.tex
src/: main.py  run_ncf_baseline.py  template.py  typings.py
src/ensemble_learning/: ensemble_reinforced_gnn_ncf.sh
src/mains/: README.md  ensemble_reinforced_gnn_ncf.sh  main_gnn.py  main_gnn_baseline.py  main_gnn_ncf.py  main_knnbaseline.py  main_ncf_baseline.py  main_nmf.py  main_reinforced_gnn_ncf.py  main_reinforced_gnn_ncf_att.py  main_slopeone.py  main_svd_biased.py  main_svd_unbiased.py  main_svdpp.py  reinforcement_generator.py  test.py  test.sh  test_old.py  test_old.sh  test_reliabilities.py  test_reliabilities_old.py  test_reliabilities_other_network.py
src/modules/: attention.py  gnn.py  gnn_baseline.py  gnn_ncf.py  knnbaseline.py  ncf_baseline.py  nmf.py  reinforced_gnn_ncf.py  reinforced_gnn_ncf_att.py  slopeone.py  svd_biased.py  svd_unbiased.py  svdpp.py  test.py  test_old.py  test_reliability_predictor.py  test_reliability_predictor_old.py  test_reliability_predictor_other_network.py
src/utilities/: bagging.py  (+4 more)
(+3 files in other folders)
