[tool.poetry]
name = "advanced-ml"
version = "1.0.0"
description = "Repository for project of Computational Intelligence Lab (263-0008-00L) offered in Spring 2021"

license = "MIT"
authors = ["András Geiszl", "Silas Walker", "Matteo Russo", "LFW Anthony"]

readme = "README.md"
repository = "https://github.com/walkersilas/CIL-Project"
homepage = "https://github.com/walkersilas/CIL-Project"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.1"
isort = "^5.8.0"
mypy = "^0.812"
pre-commit = "^2.12.1"
pydocstyle = "^6.0.0"
pylint = "^2.7.4"

[tool.black]
line-length = 100
